--- a/docs/styles.css
+++ b/docs/styles.css
@@ -22,7 +22,6 @@ html, body, table, tbody, tr, td {
     margin: 0;
     padding: 0;
     border: 0;
-    font-size: 100%;
 }
 
 body, td, th, tr, p, a, header{
@@ -30,17 +29,13 @@ body, td, th, tr, p, a, header{
 }
 
 body, td, th, tr, p{
-    font-size: 14px
-}
-
-html {
-    margin: auto;
+    font-size: 16px;
 }
 
 body {
     background-color: var(--color-one);
-    min-height: 100%;
-    /* position:absolute;    */
+    width: 100%;
+    /* position:fixed; */
 }
 
 h1 {
@@ -89,11 +84,16 @@ th {
 }
 
 .container {
-    width: 1200px;
+    /* width: 1200px; */
+    /* padding-left: 30px; */
+    /* padding-right: 30px; */
+
+    width: 96%;
+    max-width: 1200px;
+
     margin-left: auto;
     margin-right: auto;
-    padding-left: 30px;
-    padding-right: 30px;
+    
     border: none;
     position: relative;
     clear: both;
@@ -108,10 +108,10 @@ th {
 }
 
 .nav-menu nav {
-    width: 1188px;
+    /* width: 1188px; */
+    width: 100%;
+
     height: 42px;
-    /* margin: 6px; */
-    margin: 6px 0 6px 0;
 
     /* background-color: palevioletred; */
     /* background-color: var(--color-two); */
@@ -130,9 +130,9 @@ th {
 
 .nav-menu li {
     height: 36px;
-    width: 116px;
+    width: fit-content;
     margin: 0 4px 0 0;
-    padding: 0px;
+    padding: 0 6px 0 6px;
 
     background-color: var(--color-one);
     border-width: 3px;
@@ -165,9 +165,9 @@ a.curr-nav:hover li {
 
 
 /* Main part of the document */
-#main {
+/* #main {
     margin: 12px 0 12px 0;
-}
+} */
 
 
 /* Main scene selection grid */
@@ -182,7 +182,8 @@ a.curr-nav:hover li {
 .index-thumb-elem {
     margin: auto;
     width: 400px;
-    height: 340px;
+    /* height: 340px; */
+    height: auto;
 }
 
 .thumbnail {
@@ -211,6 +212,22 @@ a.curr-nav:hover li {
     border-width: 2px 0 0 0;
     border-color: var(--color-one-hover);
     padding: 10px 0 0 0;
+}
+
+/* .dataset-cell {
+    display: grid;
+    margin: auto;
+    align-items: center;
+    justify-content: center;
+} */
+
+.dataset-cell {
+    border-style: dotted;
+    border-width: 2px 0 0 0;
+    border-color: var(--color-one-hover);
+    padding: 12px 0 12px 0;
+    min-height: auto;
+    overflow:hidden;
 }
 
 .dataset-thumbnail-cell {
@@ -249,8 +266,9 @@ a.curr-nav:hover li {
 
 .dataset-text-cell {
     float: left;
-    margin-left: 24px;
+    margin-right: 24px;
     vertical-align: top;
+    width: 400px;
     /* position: absolute; */
     /* top: 0; */
     /* left: 0; */
@@ -456,11 +474,67 @@ pre button:hover {
     text-align: center;
 }
 
+@media (max-width: 914px) {
+    .dataset-text-cell {
+        width: 100%;
+    }
+}
 
-@media screen and (max-width: 1260px) {
-    .container {
-        max-width: -webkit-calc(100% - 60px);
-        max-width:    -moz-calc(100% - 660px);
-        max-width:         calc(100% - 60px);
+@media (max-width: 768px) {
+    body, td, th, tr, p{
+        font-size: 24px;
+    }
+
+    h1 {
+        font-size: 40px;
+    }
+
+    h2 {
+        font-size: 30px;
+    }
+
+    h3 {
+        font-size: 26px;
+    }
+    
+    .nav-menu {
+        height: 60px;
+    }
+
+    .nav-menu nav {
+        height: 48px;
+        display: flex;
+        justify-content: center;
+    }
+
+    .footer {
+        height: 54px;
+    }
+
+    .git-button-text {
+        height: 22px;
+        padding: 0px 0px 0 12px;
+        float: right;
+        text-align: center;
+    }
+
+    .update-date {
+        display:none;
+    }
+
+    .git-button {
+        margin: 12px 12px 12px 16px;
+    }
+}
+
+@media (max-width: 672px) {
+    .dataset-mesh-thumbnail {
+        width: 150px;
+    }
+}
+
+@media (max-width: 526px) {
+    .dataset-mesh-thumbnail {
+        width: 100px;
     }
 }
